--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.png filter=lfs diff=lfs merge=lfs -text
+public/logo-fiscalverify.png -filter -diff -merge -text
+public/hero-illustration.png -filter -diff -merge -text
